--- a/src/sass/search.scss
+++ b/src/sass/search.scss
@@ -259,6 +259,9 @@ table.loadout_sr {
 			bottom: 0px;
 			left: 0px;
 			width: 100%;
+			padding: 0 0.5em;
+			box-sizing: border-box;
+			-moz-box-sizing: border-box;
 			text-align: center;
 			background: rgba(0, 0, 0, 0.4);
 			font-size: xx-small;
