--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -123,6 +123,10 @@ div.mainpcont > section {
 				vertical-align: top;
 				border-radius: 0.5em;
 
+				.ship-icon {
+					margin: 3px;
+				}
+
 				img.abs {
 					overflow: hidden;
 					border-radius: 1em;
