a proper em value instead of px

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -124,7 +124,7 @@ div.mainpcont > section {
 				border-radius: 0.5em;
 
 				.ship-icon {
-					margin: 3px;
+					margin: 0.25em;
 				}
 
 				img.abs {
